all-in-one.yaml
##############################################
################## Backend
##############################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-back-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-back-app
  template:
    metadata:
      labels:
        app: azure-back-app
    spec:
      containers:
        - name: azure-back-app
          image: silverfang94/azure-back:v1
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 5000
            protocol: TCP
          # env:
          # - name: ASPNETCORE_URLS
          #   value: "http://*:5000"
---
apiVersion: v1
kind: Service
metadata:
  name: azure-back-svc
spec:
  # type: NodePort
  selector:
    app: azure-back-app
  ports:
    - port: 5000
      targetPort: 5000
      # nodePort: 5000
      protocol: TCP
---
##############################################
################## Frontend
##############################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-front-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-front-app
  template:
    metadata:
      labels:
        app: azure-front-app
    spec:
      containers:
        - name: azure-front-app
          image: silverfang94/azure-front:v2
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 4200
            protocol: TCP
            # env:
            # - name: BASE_URL
            #   value: "http://localhost:5000/"
            # - name: REDIRECT_URL
            #   value: "http://localhost:4200"
---
apiVersion: v1
kind: Service
metadata:
  name: azure-front-svc
spec:
  # type: NodePort
  selector:
    app: azure-front-app
  ports:
    - port: 4200
      targetPort: 4200
      # nodePort: 32002
      protocol: TCP
---
##############################################
################## Ingress
##############################################
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: azure-web
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  # - host: minikube.mshome.net
  - http:
      paths:
      - backend:
          serviceName: azure-back-svc
          servicePort: 5000
        # path : /back(/|$)(.*)
        # pathType: Prefix
      - backend:
          serviceName: azure-front-svc
          servicePort: 4200
      #   path: /(.*)
      #   pathType: Prefix
