ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: azure-web
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: minikube.mshome.net
  - http:
      paths:
      - backend:
          serviceName: azure-back-svc
          servicePort: 5000
        # path : /api
      - backend:
          serviceName: azure-front-svc
          servicePort: 80
        # path: /
